--- a/double_pinyin_flypy.custom.yaml
+++ b/double_pinyin_flypy.custom.yaml
@@ -8,12 +8,12 @@
 # %APPDATA%\Rime  (Windows)
 #
 # 重新部署即可
-#
+# Ryx 20250925_0943
 
 patch:
   switches:
     - name: ascii_mode
-      reset: 1
+      reset: 0
       states: [中文, 洋文]
     - name: full_shape
       reset: 0
@@ -59,7 +59,7 @@ patch:
       # - abbrev/^([az]).+$/$1/ #简拼（首字母）
       # - abbrev/^([zcs]h).+$/$1/ #简拼（zh, ch, sh）
       # - derive/^([zcs])h/$1/ # zh, ch, sh => z, c, s
-      - derive/^([zcs])([^h])/$1h$2/ # z, c, s => zh, ch, sh
+      # - derive/^([zcs])([^h])/$1h$2/ # z, c, s => zh, ch, sh
       # - derive/^r/l/  # r => l
       # - derive/^l/r/  # l => r
       # - derive/^n/l/  # n => l
@@ -97,8 +97,8 @@ patch:
       - xlit/QWRTYUIOPSDFGHJKLZXCVBNM/qwrtyuiopsdfghjklzxcvbnm/
       #- abbrev/^(.).+$/$1/
 
-  # "recognizer/patterns/punct": "^/([a-z]+|[0-9])$" # / 键
-  "recognizer/patterns/punct": "^\\\\([A-Z|a-z]*|[0-9]|10)$" # \ 键
+  "recognizer/patterns/punct": "^/([a-z]+|[0-9])$" # / 键
+  # "recognizer/patterns/punct": "^\\\\([A-Z|a-z]*|[0-9]|10)$" # \ 键
   # "recognizer/patterns/punct": "^i([A-Z|a-z]*|[0-9]|10)$" # i 键
 
   # 主翻译器
