--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -5,4 +5,6 @@ patch:
     __include: "weasel.style:/preset_color_schemes"
   "style/+":
     __include: "weasel.style:/style"
-  "style/color_scheme": gruvbox
+  # "style/color_scheme": sciFiBlue
+
+  
